# evo-webview

./: .clang-format  .gitignore  CMakeLists.txt  README.md  autoformat.sh  fetch-mswebview.sh  test-cmake-inclusion.sh  unixbuild.sh  webview_test.cc  windowsbuild.sh
.github/workflows/: autoformat.yml  ci-linux.yml  ci-mac.yml  ci-windows.yml  ci.yaml  cmake-consumption.yml
Tests/Fixtures/WebViewTestApp/: CMakeLists.txt  main.cpp
examples/: basic.cc  bind.cc
include/: webview.h  webview.hpp
src/common/: browser_engine.hpp  c_api.cpp  c_api.h  json_utils.hpp  webview.cpp  webview.hpp  webview_c_api.h
src/linux/: webkit2gtk_engine.cpp  webkit2gtk_engine.hpp  webview_gtk.h
src/macOS/: cocoa_engine.hpp  cocoa_engine.mm  webview_cocoa.h  webview_cocoa.mm
src/windows/: com_init_wrapper.cpp  com_init_wrapper.hpp  mswebview_engine.cpp  mswebview_engine.hpp  webview_msedge.h  wstring_utils.hpp
src/windows/shared/: library_symbol.hpp  native_library.hpp
src/windows/webview2_loader/: com_event_handler.cpp  com_event_handler.hpp  com_interface_handler.cpp  com_interface_handler.hpp  loader.hpp  msedge_runtime_loader.cpp  msedge_runtime_loader.hpp  reg_key.cpp  reg_key.hpp  webview2_com_handler.cpp  webview2_com_handler.hpp
